--- a/refs/wildhell.bib
+++ b/refs/wildhell.bib
@@ -1,12 +1,156 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for c.chamberlaintnc.org at 2025-01-06 11:46:29 -0500 
+%% Created for c.chamberlaintnc.org at 2025-01-06 13:43:18 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{mckown2014,
+	abstract = {Summary Populus trichocarpa is widespread across western North America spanning extensive variation in photoperiod, growing season and climate. We investigated trait variation in P. trichocarpa using over 2000 trees from a common garden at Vancouver, Canada, representing replicate plantings of 461 genotypes originating from 136 provenance localities. We measured 40 traits encompassing phenological events, biomass accumulation, growth rates, and leaf, isotope and gas exchange-based ecophysiology traits. With replicated plantings and 29 354 single nucleotide polymorphisms (SNPs) from 3518 genes, we estimated both broad-sense trait heritability (H2) and overall population genetic structure from principal component analysis. Populus trichocarpa had high phenotypic variation and moderate/high H2 for many traits. H2 ranged from 0.3 to 0.9 in phenology, 0.3 to 0.8 in biomass and 0.1 to 0.8 in ecophysiology traits. Most traits correlated strongly with latitude, maximum daylength and temperature of tree origin, but not necessarily with elevation, precipitation or heat : moisture indices. Trait H2 values reflected trait correlation strength with geoclimate variables. The population genetic structure had one significant principal component (PC1) which correlated with daylength and showed enrichment for genes relating to circadian rhythm and photoperiod. Robust relationships between traits, population structure and geoclimate in P. trichocarpa reflect patterns which suggest that range-wide geographical and environment gradients have shaped its genotypic and phenotypic variability.},
+	author = {McKown, Athena D. and Guy, Robert D. and Kl{\'a}p{\v s}t{\v e}, Jaroslav and Geraldes, Armando and Friedmann, Michael and Cronk, Quentin C. B. and El-Kassaby, Yousry A. and Mansfield, Shawn D. and Douglas, Carl J.},
+	date-added = {2025-01-06 13:42:27 -0500},
+	date-modified = {2025-01-06 13:42:34 -0500},
+	doi = {https://doi.org/10.1111/nph.12601},
+	eprint = {https://nph.onlinelibrary.wiley.com/doi/pdf/10.1111/nph.12601},
+	journal = {New Phytologist},
+	keywords = {biomass, clinal variation, ecophysiology, landscape genetics, latitude, phenology, photoperiod, poplar (Populus trichocarpa)},
+	number = {4},
+	pages = {1263-1276},
+	title = {Geographical and environmental gradients shape phenotypic trait variation and genetic structure in opulus trichocarpa},
+	url = {https://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.12601},
+	volume = {201},
+	year = {2014},
+	bdsk-url-1 = {https://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.12601},
+	bdsk-url-2 = {https://doi.org/10.1111/nph.12601}}
+
+@article{vico2021,
+	abstract = {In Northern Europe, poplars (Populus) can provide biomass for energy and material use, but most available clones were developed for lower latitudes and are unlikely to be well adapted to higher latitudes, even under warmer climates. We thus need to understand how clones respond to climatic conditions and photoperiod, and how these responses can be predicted. We answer these questions exploiting leaf phenological data of Populus clones, grown in six sites across the Baltic region, in Northern Europe, for 2 years with contrasting climatic conditions. Regarding the effects of climatic conditions and photoperiod, within each site, higher temperatures advanced the timing and enhanced the speed of spring and autumn phenology, but reduced the effective growing season length. Across sites, latitude affected the timing of spring and autumn phenology, the speed of spring phenology, and the effective growing season length; clone affected only the timing of phenology. Regarding the predictability of clone response to growing conditions, the growing degree day (GDD) model could not predict spring phenology, because the growing degree day threshold for a specific phenological stage was not only clone-, but also latitude- and year-specific. Yet, this GDD threshold allowed a robust ranking of clones across sites and years, thus providing a tool to determine the relative differences across clones, independently of latitude and temperature. A similar, but not as strong, pattern was observed in the timing of spring and autumn phenological stages. Hence, while prediction of spring phenology remains elusive, the ranking of clones based on observations of their phenology in a single location can provide useful indications on the clones'relative performance under different latitudes and climates.},
+	author = {Vico, Giulia and Karacic, Almir and Adler, Anneli and Richards, Thomas and Weih, Martin},
+	date = {2021/06/01},
+	date-added = {2025-01-06 13:42:19 -0500},
+	date-modified = {2025-01-06 13:43:16 -0500},
+	doi = {10.1007/s12155-021-10249-5},
+	id = {Vico2021},
+	isbn = {1939-1242},
+	journal = {BioEnergy Research},
+	number = {2},
+	pages = {445--459},
+	title = {Consistent Poplar Clone Ranking Based on Leaf Phenology and Temperature Along a Latitudinal and Climatic Gradient in Northern Europe},
+	url = {https://doi.org/10.1007/s12155-021-10249-5},
+	volume = {14},
+	year = {2021},
+	bdsk-url-1 = {https://doi.org/10.1007/s12155-021-10249-5}}
+
+@article{delpierre2024,
+	abstract = {ABSTRACT Aim To quantify the intra-community variability of leaf-out (ICVLo) among dominant trees in temperate deciduous forests, assess its links with specific and phylogenetic diversity, identify its environmental drivers and deduce its ecological consequences with regard to radiation received and exposure to late frost. Location Eastern North America (ENA) and Europe (EUR). Time Period 2009--2022. Major Taxa Studied Temperate deciduous forest trees. Methods We developed an approach to quantify ICVLo through the analysis of RGB images taken from phenological cameras. We related ICVLo to species richness, phylogenetic diversity and environmental conditions. We quantified the intra-community variability of the amount of radiation received and of exposure to late frost. Results Leaf-out occurred over a longer time interval in ENA than in EUR. The sensitivity of leaf-out to temperature was identical in both regions (−3.4 days per $\,^{\circ}$C). The distributions of ICVLo were similar in EUR and ENA forests, despite the latter being more species-rich and phylogenetically diverse. In both regions, cooler conditions and an earlier occurrence of leaf-out resulted in higher ICVLo. ICVLo resulted in ca. 8\% difference of radiation received from leaf-out to September among individual trees. Forest communities in ENA had shorter safety margins as regards the exposure to late frosts, and were actually more frequently exposed to late frosts. Main Conclusions We conducted the first intercontinental analysis of the variability of leaf-out at the scale of tree communities. North American and European forests showed similar ICVLo, in spite of their differences in terms of species richness and phylogenetic diversity, highlighting the relevance of environmental controls on ICVLo. We quantified two ecological implications of ICVLo (difference in terms of radiation received and exposure to late frost), which should be explored in the context of ongoing climate change, which affects trees differently according to their phenological niche.},
+	author = {Delpierre, Nicolas and Garnier, Suzon and Treuil-Dussouet, Hugo and Hufkens, Koen and Lin, Jianhong and Beier, Colin and Bell, Michael and Berveiller, Daniel and Cuntz, Matthias and Curioni, Giulio and Dahlin, Kyla and Denham, Sander O. and Desai, Ankur R. and Domec, Jean-Christophe and Hart, Kris M. and Ibrom, Andreas and Joetzjer, Emilie and King, John and Klosterhalfen, Anne and Koebsch, Franziska and McHale, Patrick and Morfin, Alexandre and Munger, J. William and Noormets, Asko and Pilegaard, Kim and Pohl, Felix and Rebmann, Corinna and Richardson, Andrew D. and Rothstein, David and Schwartz, Mark D. and Wilkinson, Matthew and Soudani, Kamel},
+	date-added = {2025-01-06 12:47:46 -0500},
+	date-modified = {2025-01-06 12:47:53 -0500},
+	doi = {https://doi.org/10.1111/geb.13910},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/geb.13910},
+	journal = {Global Ecology and Biogeography},
+	keywords = {dominant trees, Europe, intra-community variability, leaf-out, North America, phenology, temperate forests},
+	note = {e13910 GEB-2023-0637.R2},
+	number = {12},
+	pages = {e13910},
+	title = {Phenology Across Scales: An Intercontinental Analysis of Leaf-Out Dates in Temperate Deciduous Tree Communities},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/geb.13910},
+	volume = {33},
+	year = {2024},
+	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/geb.13910},
+	bdsk-url-2 = {https://doi.org/10.1111/geb.13910}}
+
+@article{polgar2011,
+	abstract = {Summary Leafing-out of woody plants begins the growing season in temperate forests and is one of the most important drivers of ecosystem processes. There is substantial variation in the timing of leaf-out, both within and among species, but the leaf development of almost all temperate tree and shrub species is highly sensitive to temperature. As a result, leaf-out times of temperate forests are valuable for observing the effects of climate change. Analysis of phenology data from around the world indicates that leaf-out is generally earlier in warmer years than in cooler years and that the onset of leaf-out has advanced in many locations. Changes in the timing of leaf-out will affect carbon sequestration, plant--animal interactions, and other essential ecosystem processes. The development of remote sensing methods has expanded the scope of leaf-out monitoring from the level of an individual plant or forest to an entire region. Meanwhile, historical data have informed modeling and experimental studies addressing questions about leaf-out timing. For most species, onset of leaf-out will continue to advance, although advancement may be slowed for some species because of unmet chilling requirements. More information is needed to reduce the uncertainty in predicting the timing of future spring onset. Contents Summary 926 I. Introduction 927 II. What triggers a plant to leaf-out? 928 III. Variation in leaf-out among species 929 IV. Leaf-out and climate change 932 V. Conclusions 937 Acknowledgements 937 References 937},
+	author = {Polgar, Caroline A. and Primack, Richard B.},
+	date-added = {2025-01-06 12:45:24 -0500},
+	date-modified = {2025-01-06 12:45:31 -0500},
+	doi = {https://doi.org/10.1111/j.1469-8137.2011.03803.x},
+	eprint = {https://nph.onlinelibrary.wiley.com/doi/pdf/10.1111/j.1469-8137.2011.03803.x},
+	journal = {New Phytologist},
+	keywords = {budburst, climate change, leaf-out, phenology, temperate forests},
+	number = {4},
+	pages = {926-941},
+	title = {Leaf-out phenology of temperate woody plants: from trees to ecosystems},
+	url = {https://nph.onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8137.2011.03803.x},
+	volume = {191},
+	year = {2011},
+	bdsk-url-1 = {https://nph.onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8137.2011.03803.x},
+	bdsk-url-2 = {https://doi.org/10.1111/j.1469-8137.2011.03803.x}}
+
+@article{donnelly2017,
+	abstract = {A wide range of intra- and interspecific variation occurs in spring leaf phenology as a result of biotic factors such as, life strategy, ecological niche and genetic adaptation, and abiotic factors such as environmental condition. Whereas knowing when the start of bud-burst occurs is necessary for determining the beginning of the growing season, and the subsequent start of carbon uptake, the duration of phenophases is equally important (to estimate the rate of carbon uptake, for example), but rarely reported. Here, we investigate variation in the timing and duration of 3 key phenophase categories (bud-open, leaf-out, full-leaf unfolded) from a range of 8 broadleaf and 2 conifer species in a mixed forest in northern Wisconsin, USA over a 5-year period. As expected, the start of each phenophase category varied across species and years and an earlier start to one phenophase did not necessarily result in an earlier start to subsequent phenophases nor did it mean a faster or slower progression. Ecological niche was not always a useful predictor of the timing or duration of the spring phenology season. The spring phenology season from bud-burst to full leaf open for the entire forest community took an average of 13days ranging from 12 to 18days across species. Bud-open and leaf-out lasted an average of 4days whereas, full-leaf unfolding lasted 5 and again there were variations among species. Full leaf unfolded for A. incana lasted significantly (p<0.001) longer than other species. Variation in the duration of the spring phenology season among years closely tracked local seasonal air-temperature based on growing degree hours (GDH). These results could be used to help determine the relationship between phenology and the potential for carbon storage in early spring in a mixed forest and highlight the value of direct field observation data at species level, the detail of which cannot, at present, be captured by satellite remote sensing.},
+	author = {Alison Donnelly and Rong Yu and Amelia Caffarra and Jonathan Hanes and Liang Liang and Ankur R. Desai and Lingling Liu and Mark D. Schwartz},
+	date-added = {2025-01-06 12:41:58 -0500},
+	date-modified = {2025-01-06 12:42:06 -0500},
+	doi = {https://doi.org/10.1016/j.agrformet.2017.05.007},
+	issn = {0168-1923},
+	journal = {Agricultural and Forest Meteorology},
+	keywords = {Deciduous trees, Coniferous trees, Bud-open, Leaf-out, Full leaf unfolded, Spring phenophase duration, Local temperature},
+	pages = {55-67},
+	title = {Interspecific and interannual variation in the duration of spring phenophases in a northern mixed forest},
+	url = {https://www.sciencedirect.com/science/article/pii/S0168192317301661},
+	volume = {243},
+	year = {2017},
+	bdsk-url-1 = {https://www.sciencedirect.com/science/article/pii/S0168192317301661},
+	bdsk-url-2 = {https://doi.org/10.1016/j.agrformet.2017.05.007}}
+
+@article{ma2022,
+	abstract = {Abstract Vegetation phenology has been viewed as the nature's calendar and an integrative indicator of plant-climate interactions. The correct representation of vegetation phenology is important for models to accurately simulate the exchange of carbon, water, and energy between the vegetated land surface and the atmosphere. Remote sensing has advanced the monitoring of vegetation phenology by providing spatially and temporally continuous data that together with conventional ground observations offers a unique contribution to our knowledge about the environmental impact on ecosystems as well as the ecological adaptations and feedback to global climate change. Land surface phenology (LSP) is defined as the use of satellites to monitor seasonal dynamics in vegetated land surfaces and to estimate phenological transition dates. LSP, as an interdisciplinary subject among remote sensing, ecology, and biometeorology, has undergone rapid development over the past few decades. Recent advances in sensor technologies, as well as data fusion techniques, have enabled novel phenology retrieval algorithms that refine phenology details at even higher spatiotemporal resolutions, providing new insights into ecosystem dynamics. As such, here we summarize the recent advances in LSP and the associated opportunities for science applications. We focus on the remaining challenges, promising techniques, and emerging topics that together we believe will truly form the very frontier of the global LSP research field.},
+	author = {Ma, Xuanlong and Zhu, Xiaolin and Xie, Qiaoyun and Jin, Jiaxin and Zhou, Yuke and Luo, Yunpeng and Liu, Yuxia and Tian, Jiaqi and Zhao, Yuhe},
+	date-added = {2025-01-06 12:35:00 -0500},
+	date-modified = {2025-01-06 12:35:06 -0500},
+	doi = {https://doi.org/10.1111/gcb.16436},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/gcb.16436},
+	journal = {Global Change Biology},
+	keywords = {big data, biodiversity, carbon cycle, global change, public health, vegetation dynamics},
+	number = {24},
+	pages = {7186-7204},
+	title = {Monitoring nature's calendar from space: Emerging topics in land surface phenology and associated opportunities for science applications},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.16436},
+	volume = {28},
+	year = {2022},
+	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.16436},
+	bdsk-url-2 = {https://doi.org/10.1111/gcb.16436}}
+
+@article{shanley2024,
+	abstract = {Natural climate solutions are critical actions of ecosystem stewardship to mitigate climate change. However, prioritizing locations and possible actions is challenging. We demonstrate a generalizable approach for identifying potential opportunities for natural climate solutions by creating a spatial hierarchy of land management restrictions. Global forest carbon stocks and flux models were then used to explore forest-based natural climate solutions in the high-carbon density coastal temperate rainforests of western North America. Our results show 13 million hectares are available for action, an area that holds 4,900 $\pm$640 megatonnes of carbon dioxide equivalent and represents 45{\%} of regional and 0.5{\%} of global aboveground forest carbon stocks. Based on historical trends, a 10{\%} reduction in average annual forest carbon loss through improved forest management and conservation could reduce forest carbon emissions by 9.1 megatonnes of carbon dioxide equivalent per year, corresponding to 5.2{\%} of the 2030 land-based climate commitments made by the United States and Canada. Large-scale implementation of natural climate solutions will require collaborative planning with forest-dependent communities, industry, governments, and Indigenous peoples.},
+	author = {Shanley, Colin S. and Graves, Rose A. and Drever, C. Ronnie and Schindel, Michael and Robertson, James C. and Case, Michael J. and Biswas, Tanushree},
+	date = {2024/09/12},
+	date-added = {2025-01-06 12:06:41 -0500},
+	date-modified = {2025-01-06 12:06:41 -0500},
+	doi = {10.1038/s43247-024-01678-z},
+	id = {Shanley2024},
+	isbn = {2662-4435},
+	journal = {Communications Earth \& Environment},
+	number = {1},
+	pages = {502},
+	title = {Mapping forest-based natural climate solutions},
+	url = {https://doi.org/10.1038/s43247-024-01678-z},
+	volume = {5},
+	year = {2024},
+	bdsk-url-1 = {https://doi.org/10.1038/s43247-024-01678-z}}
+
+@article{roe2021,
+	abstract = {Abstract Land-based climate mitigation measures have gained significant attention and importance in public and private sector climate policies. Building on previous studies, we refine and update the mitigation potentials for 20 land-based measures in >200 countries and five regions, comparing ``bottom-up'' sectoral estimates with integrated assessment models (IAMs). We also assess implementation feasibility at the country level. Cost-effective (available up to \$100/tCO2eq) land-based mitigation is 8--13.8 GtCO2eq yr−1 between 2020 and 2050, with the bottom end of this range representing the IAM median and the upper end representing the sectoral estimate. The cost-effective sectoral estimate is about 40\% of available technical potential and is in line with achieving a 1.5$\,^{\circ}$C pathway in 2050. Compared to technical potentials, cost-effective estimates represent a more realistic and actionable target for policy. The cost-effective potential is approximately 50\% from forests and other ecosystems, 35\% from agriculture, and 15\% from demand-side measures. The potential varies sixfold across the five regions assessed (0.75--4.8 GtCO2eq yr−1) and the top 15 countries account for about 60\% of the global potential. Protection of forests and other ecosystems and demand-side measures present particularly high mitigation efficiency, high provision of co-benefits, and relatively lower costs. The feasibility assessment suggests that governance, economic investment, and socio-cultural conditions influence the likelihood that land-based mitigation potentials are realized. A substantial portion of potential (80\%) is in developing countries and LDCs, where feasibility barriers are of greatest concern. Assisting countries to overcome barriers may result in significant quantities of near-term, low-cost mitigation while locally achieving important climate adaptation and development benefits. Opportunities among countries vary widely depending on types of land-based measures available, their potential co-benefits and risks, and their feasibility. Enhanced investments and country-specific plans that accommodate this complexity are urgently needed to realize the large global potential from improved land stewardship.},
+	author = {Roe, Stephanie and Streck, Charlotte and Beach, Robert and Busch, Jonah and Chapman, Melissa and Daioglou, Vassilis and Deppermann, Andre and Doelman, Jonathan and Emmet-Booth, Jeremy and Engelmann, Jens and Fricko, Oliver and Frischmann, Chad and Funk, Jason and Grassi, Giacomo and Griscom, Bronson and Havlik, Petr and Hanssen, Steef and Humpen{\"o}der, Florian and Landholm, David and Lomax, Guy and Lehmann, Johannes and Mesnildrey, Leah and Nabuurs, Gert-Jan and Popp, Alexander and Rivard, Charlotte and Sanderman, Jonathan and Sohngen, Brent and Smith, Pete and Stehfest, Elke and Woolf, Dominic and Lawrence, Deborah},
+	date-added = {2025-01-06 12:06:38 -0500},
+	date-modified = {2025-01-06 12:06:38 -0500},
+	doi = {https://doi.org/10.1111/gcb.15873},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/gcb.15873},
+	journal = {Global Change Biology},
+	keywords = {AFOLU, co-benefits, demand management, feasibility, land management, land sector, mitigation, natural climate solutions, nature-based solutions},
+	number = {23},
+	pages = {6025-6058},
+	title = {Land-based measures to mitigate climate change: Potential and feasibility by country},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.15873},
+	volume = {27},
+	year = {2021},
+	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.15873},
+	bdsk-url-2 = {https://doi.org/10.1111/gcb.15873}}
 
 @article{Finn2007,
 	author = {Finn, G.A. and Straszewski, A.E. and Peterson, V.},
